[project]
name = "symbolic-music-discrete-diffusion"
dynamic = ["version"]
dependencies = [
"absl-py==1.2.0",
"addict==2.4.0",
"aiofiles==23.1.0",
"annotated-types==0.5.0",
"anyio==3.6.2",
"appdirs==1.4.4",
"asttokens==2.0.8",
"audioread==3.0.0",
"bidict==0.22.1",
"bleach==5.0.1",
"bokeh==2.4.3",
"charset-normalizer==2.1.1",
"click==8.1.3",
"commonmark==0.9.1",
"contourpy==1.0.5",
"cryptography==38.0.3",
"cycler==0.11.0",
"demjson3==3.0.6",
"docutils==0.17.1",
"elementpath==3.0.2",
"executing==1.0.0",
"fastapi==0.100.0",
"fastapi-socketio==0.0.10",
"filelock==3.8.0",
"fonttools==4.37.3",
"h11==0.14.0",
"httpcore==0.16.2",
"httptools==0.6.0",
"httpx==0.24.1",
"huggingface-hub==0.10.1",
"importlib-metadata==5.1.0",
"intervaltree==3.1.0",
"ipython==8.5.0",
"itsdangerous==2.1.2",
"jaraco-classes==3.2.3",
"jeepney==0.8.0",
"joblib==1.1.0",
"jsonpatch==1.32",
"jsonpointer==2.3",
"justpy==0.2.8",
"keyring==23.11.0",
"kiwisolver==1.4.4",
"lark-parser==0.12.0",
"librosa==0.9.2",
"llvmlite==0.39.1",
"markdown2==2.4.9",
"matplotlib==3.6.0",
"mido==1.2.10",
"more-itertools==9.0.0",
"nicegui==1.3.5",
"note-seq==0.0.5",
"numba==0.56.2",
"orjson==3.9.2",
"packaging==21.3",
"pandas==1.4.4",
"partitura==0.4.0",
"pillow==9.2.0",
"pkginfo==1.8.3",
"pooch==1.6.0",
"pretty-midi==0.2.10",
"prompt-toolkit==3.0.31",
"protobuf==4.21.6",
"pscript==0.7.7",
"pyaudio==0.2.12",
"pydantic==2.0.3",
"pydantic-core==2.3.0",
"pydub==0.25.1",
"pyfluidsynth==1.3.1",
"pygments==2.13.0",
"pyparsing==3.0.9",
"pypianoroll==1.0.4",
"pyqt5-sip==12.11.0",
"python-dotenv==1.0.0",
"python-engineio==4.5.1",
"python-multipart==0.0.6",
"python-socketio==5.8.0",
"pytz==2022.2.1",
"pyyaml==6.0",
"pyzmq==24.0.1",
"readme-renderer==37.3",
"regex==2022.10.31",
"requests-toolbelt==0.10.1",
"resampy==0.4.2",
"rfc3986==1.5.0",
"rich==12.6.0",
"scikit-learn==1.1.2",
"scipy==1.9.1",
"secretstorage==3.3.3",
"setuptools==59.8.0",
"sniffio==1.3.0",
"sortedcontainers==2.4.0",
"soundfile==0.10.3.post1",
"stack-data==0.5.0",
"starlette==0.27.0",
"tensorboard-plugin-wit==1.8.1",
"threadpoolctl==3.1.0",
"tokenizers==0.13.1",
"traitlets==5.4.0",
"transformers==4.24.0",
"twine==4.0.1",
"typing-extensions==4.7.1",
"urllib3==1.26.12",
"uvicorn==0.22.0",
"uvloop==0.17.0",
"vbuild==0.8.1",
"visdom==0.1.8.9",
"watchfiles==0.19.0",
"webencodings==0.5.1",
"websocket-client==1.4.1",
"websockets==10.4",
"xmlschema==2.0.4",
"zipp==3.11.0",
]